# notion_sdk

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg
notion_sdk/: __init__.py  __version__.py  notion.py
notion_sdk/access/: block.py  database.py  page.py  search.py  user.py
src/notion_sdk/: __init__.py  __version__.py
src/notion_sdk/access/: block.py  database.py  page.py  search.py  user.py
tests/: test_init.py
