[metadata]
name = notion_sdk
description =
author =
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    notion_sdk
install_requires =
    certifi==2021.10.8
    charset-normalizer==2.0.12
    idna==3.3
    python-dotenv==0.19.2
    requests==2.27.1
    urllib3==1.26.8
python_requires = >=3.0
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    tox>=3.24
    pytest>=7.0
    pytest-cov>=3.0
    mypy>=0.930

[options.package_data]
notion_sdk = py.typed

[flake8]
max-line-length = 160
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

